Fix sources pane and accordion overflow

--- a/src/devtools/client/debugger/src/components/shared/Accordion.css
+++ b/src/devtools/client/debugger/src/components/shared/Accordion.css
@@ -8,6 +8,8 @@
   list-style-type: none;
   padding: 0px;
   margin-top: 0px;
+  display: flex;
+  flex-direction: column;
 }
 
 .accordion ._header {
